project card overflow problem solved kind of + navbar padding of left and right responsive

--- a/asset/homeDes.css
+++ b/asset/homeDes.css
@@ -236,6 +236,12 @@ body{
     }
 }
 
+@media only screen and (max-width: 50em){
+    #header-content{
+        padding: 1rem 1rem;
+    }
+}
+
 .header__link{
     padding-right: 2rem;
     font-size: 1.1rem;
@@ -424,11 +430,12 @@ section{
 
 .envelop p{
     width: 90%;
-    margin-top: 2.5rem;
+    margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2rem;
+    margin-bottom: 10%;
     text-align: center;
+    font-size: 120%;
 }
 
 .envelop button{
